<resources>
    <string name="app_name">Голицын Игорь</string>
    <string name="mobile_number">+7 905 8 33-47-509</string>
    <string name="mobile_number_string">Мобильный</string>
    <string name="email">polus79@mail.ru9</string>
    <string name="email_string">E-mail</string>
    <string name="profile_vk">vk.com/igolitsyn9</string>
    <string name="profile_vk_String">Профиль в VK</string>
    <string name="github_repo">github.com/Igor-Golitsyn/DevIntensive9</string>
    <string name="github_repo_string">Репозиторий</string>
    <string name="about">I study java \n 1 \n 2 \n 3 \n 4 \n 5 \n 69</string>
    <string name="about_string">О себе</string>
    <string name="reiting_value">5</string>
    <string name="reiting_name">Рейтинг</string>
    <string name="lines_code_value">5</string>
    <string name="lines_code_name">Написано строк кода</string>
    <string name="projects_value">5</string>
    <string name="projects_name">Проектов</string>
    <string name="my_profile">Мой профиль</string>
    <string name="my_team">Команда</string>
    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile_dialog_gallery">Загрузить из галереи</string>
    <string name="user_profile_dialog_camera">Сделать снимок</string>
    <string name="user_profile_dialog_cancel">Отмена</string>
    <string name="user_profile_dialog_title">Изменить фото профиля</string>
    <string name="user_profile_chose_message">выберите фото</string>
    <string name="request_correct_work_programm">Для корректной работы необходимо дать разрешения</string>
    <string name="solve_answer">Разрешить</string>
    <string name="permission_to__received">Разрешение на %s получено</string>
    <string name="incomin_programm_text">ВОЙТИ</string>
    <string name="password_inter_text">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="error_make_photo">Не удалось сделать фото,\nвыберите фото из галареи:</string>
    <string name="error_input_data">Введены ошибочные данные!</string>
    <string name="vk_com">vk.com</string>
    <string name="github_com">github.com</string>
    <string name="wrong_email">Неправильный почтовый ящик!</string>
    <string name="wrong_phone_number">Неправильный номер телефона!</string>
    <string name="view_element">Просмотр</string>

</resources>
