<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.activities.MainActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                style="@style/horizontalElement">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_call_black_24dp"
                    />

                <LinearLayout
                    style="@style/centralElement">

                    <android.support.design.widget.TextInputLayout
                        style="@style/textInputLayout"
                        >

                        <EditText
                            style="@style/editText"
                            android:hint="@string/mobile_number_string"
                            android:text="@string/mobile_number"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_phone_in_talk_black_24dp"/>
            </LinearLayout>

            <View
                style="@style/separator">

            </View>

            <LinearLayout
                style="@style/horizontalElement">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_email_black_24dp"
                    />

                <LinearLayout
                    style="@style/centralElement">

                    <android.support.design.widget.TextInputLayout
                        style="@style/textInputLayout">

                        <EditText
                            style="@style/editText"
                            android:hint="@string/email_string"
                            android:text="@string/email"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_send_black_24dp"/>
            </LinearLayout>

            <View
                style="@style/separator">

            </View>

            <LinearLayout
                style="@style/horizontalElement">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_vk_circle_black_24dp"
                    />

                <LinearLayout
                    style="@style/centralElement">

                    <android.support.design.widget.TextInputLayout
                        style="@style/textInputLayout">

                        <EditText
                            style="@style/editText"
                            android:hint="@string/profile_vk_String"
                            android:text="@string/profile_vk"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>
            </LinearLayout>

            <View
                style="@style/separator">

            </View>

            <LinearLayout
                style="@style/horizontalElement">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_github_circle_black_24dp"
                    />

                <LinearLayout
                    style="@style/centralElement">

                    <android.support.design.widget.TextInputLayout
                        style="@style/textInputLayout">

                        <EditText
                            style="@style/editText"
                            android:hint="@string/github_repo_string"
                            android:text="@string/github_repo"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>
            </LinearLayout>

            <View
                style="@style/separator">

            </View>

            <LinearLayout
                style="@style/horizontalElement">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_account_circle_black_24dp"
                    />

                <LinearLayout
                    style="@style/centralElement">

                    <android.support.design.widget.TextInputLayout
                        style="@style/textInputLayout">

                        <EditText
                            style="@style/editText"
                            android:hint="@string/about_string"
                            android:text="@string/about"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <ImageView
                    style="@style/icon.right"
                    />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>

