<?xml version="1.0" encoding="utf-8"?>

<!-- Created scroll -->
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:id="@+id/user_profile_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Create phone field -->
        <LinearLayout
            style="@style/horizontalElement">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_call_black_24dp"
                />

            <LinearLayout
                style="@style/centralElement">

                <android.support.design.widget.TextInputLayout
                    style="@style/textInputLayout"
                    >

                    <EditText
                        android:id="@+id/phone_et"
                        style="@style/editText"
                        android:inputType="phone"
                        android:hint="@string/mobile_number_string"
                        android:text="@string/mobile_number"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/call_img"
                style="@style/icon.right"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
        </LinearLayout>

        <View
            style="@style/separatorGorizontal">
        </View>
        <!-- Create mail field -->
        <LinearLayout
            style="@style/horizontalElement">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_email_black_24dp"
                />

            <LinearLayout
                style="@style/centralElement">

                <android.support.design.widget.TextInputLayout
                    style="@style/textInputLayout">

                    <EditText
                        android:id="@+id/email_et"
                        android:inputType="textEmailAddress"
                        style="@style/editText"
                        android:hint="@string/email_string"
                        android:text="@string/email"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/send_email_img"
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp"/>
        </LinearLayout>

        <View
            style="@style/separatorGorizontal">
        </View>
        <!-- Create  VK field -->
        <LinearLayout
            style="@style/horizontalElement">

            <ImageView

                style="@style/icon.left"
                android:src="@drawable/ic_vk_circle_black_24dp"
                />

            <LinearLayout
                style="@style/centralElement">

                <android.support.design.widget.TextInputLayout
                    style="@style/textInputLayout">

                    <EditText
                        android:id="@+id/vk_et"
                        style="@style/editText"
                        android:hint="@string/profile_vk_String"
                        android:text="@string/profile_vk"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/link_vk_img"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View
            style="@style/separatorGorizontal">
        </View>
        <!-- Create Git profile field -->
        <LinearLayout
            style="@style/horizontalElement">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_github_circle_black_24dp"
                />

            <LinearLayout
                style="@style/centralElement">

                <android.support.design.widget.TextInputLayout
                    style="@style/textInputLayout">

                    <EditText
                        android:id="@+id/git_et"
                        style="@style/editText"
                        android:hint="@string/github_repo_string"
                        android:text="@string/github_repo"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/link_git_img"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View
            style="@style/separatorGorizontal">
        </View>
        <!-- Create user about field-->
        <LinearLayout
            style="@style/horizontalElement">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_account_circle_black_24dp"
                />

            <LinearLayout
                style="@style/centralElement"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    style="@style/textInputLayout"
                    >

                    <EditText
                        android:id="@+id/bio_et"
                        style="@style/editText"
                        android:hint="@string/about_string"
                        android:text="@string/about"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

