<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:cardBackgroundColor="@color/color_white"
    app:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.softdesign.devintensive.ui.views.AspectRatioImageView
                android:id="@+id/user_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/userphoto"
                app:aspect_ratio="1.78"/>

            <TextView
                android:id="@+id/user_full_name_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="sans-serif-medium"
                android:paddingBottom="@dimen/spacing_meadial_24"
                android:paddingLeft="@dimen/spacing_normal_16"
                android:paddingRight="@dimen/spacing_normal_16"
                android:text="Фамилия Имя"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_large_24"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_big_72"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.25">
                <TextView
                    android:id="@+id/rating_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:fontFamily="sans-serif_medium"
                    android:textSize="@dimen/font_medium_20"
                    android:textColor="@color/color_black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reiting_name"
                    android:textSize="@dimen/font_small_14"
                    android:textColor="@color/color_black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.5">
                <TextView
                    android:id="@+id/code_lines_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:fontFamily="sans-serif_medium"
                    android:textSize="@dimen/font_medium_20"
                    android:textColor="@color/color_black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lines_code_name"
                    android:textSize="@dimen/font_small_14"
                    android:textColor="@color/color_black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.25">
                <TextView
                    android:id="@+id/projects_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:fontFamily="sans-serif_medium"
                    android:textSize="@dimen/font_medium_20"
                    android:textColor="@color/color_black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/projects_name"
                    android:textSize="@dimen/font_small_14"
                    android:textColor="@color/color_black"/>
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:id="@+id/bio_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_gray_light"
            android:text="@string/about"
            android:maxLines="3"
            android:paddingRight="@dimen/spacing_normal_16"
            android:paddingLeft="@dimen/spacing_normal_16"
            android:textSize="@dimen/font_small_14"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_gray_light"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_marginBottom="@dimen/spacing_small_8"/>
        <Button
            android:id="@+id/more_info_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_element"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/color_accent"
            android:paddingLeft="@dimen/spacing_normal_16"
            android:paddingRight="@dimen/spacing_normal_16"/>
    </LinearLayout>
</android.support.v7.widget.CardView>