<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:id="@+id/main_coordinator_conteiner"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
                                                 tools:ignore="ContentDescription">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_dim_gray">

        <ImageView
            android:id="@+id/main_coordinator_conteiner_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/login_bg"/>

        <android.support.v7.widget.CardView
            android:id="@+id/autorization_box"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/color_white"
            app:cardCornerRadius="2dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_normal_16"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/spacing_medium_32">

                    <View
                        android:id="@+id/login_indicator"
                        android:layout_width="4dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_orange_red"/>

                    <TextView
                        android:id="@+id/login_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:paddingBottom="@dimen/spacing_small_8"
                        android:paddingTop="@dimen/spacing_small_8"
                        android:text="@string/incomin_programm_text"
                        android:textAllCaps="true"
                        android:textColor="@color/color_orange_red"
                        android:textSize="20dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/spacing_meadial_24"
                    android:paddingLeft="@dimen/spacing_meadial_24"
                    android:paddingRight="@dimen/spacing_meadial_24">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/wrap_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_login_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email_string"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/color_dim_gray"
                            android:textColorHint="@color/color_dim_gray"
                            android:textSize="14dp"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_login_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password_inter_text"
                            android:inputType="textPassword"
                            android:textColor="@color/color_dim_gray"
                            android:textColorHint="@color/color_dim_gray"
                            android:textSize="14dp"/>

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/spacing_normal_16"
                        android:background="@drawable/rectangle"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/incomin_programm_text"
                        android:textColor="@color/color_white"
                        />

                    <TextView
                        android:id="@+id/remembe_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/spacing_normal_16"
                        android:text="@string/forgot_password"
                        android:textSize="14dp"
                        />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>
